test/files/neg/macro-nontypeablebody.check
Macros_Test_2.scala:3: error: value foo2 is not a member of object Impls
did you mean foo?
  def foo(x: Any) = macro Impls.foo2
                                ^
1 error
